# FibonacciPy

./: .gitignore  ATTRIBUTIONS.md  LICENSE  README.md  bunpack.yaml  pyproject.toml
.junpack/: pack.yaml
scripts/: lint.sh
src/fibonacci/: __init__.py  fibonacci.py  main.py  py.typed
src/fibonacci_tests/: fibonacci.py  maintmp.py
